rust/schema/tests/snapshots/patch__thematic-simple-add.snap
---
source: rust/schema/tests/patch.rs
expression: "Fixture { old, new, ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: This is something.
            authorship:
              - - 1
                - 0
                - 18
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: Paragraph
      content:
        - type: Text
          value:
            string: And something else.
            authorship:
              - - 1
                - 0
                - 19
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: This is something.
    - type: ThematicBreak
    - type: Paragraph
      content:
        - type: Text
          value: And something else.
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  content:
    - type: Paragraph
      content:
        - type: Text
          value:
            string: This is something.
            authorship:
              - - 1
                - 0
                - 18
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
    - type: ThematicBreak
    - type: Paragraph
      content:
        - type: Text
          value:
            string: And something else.
            authorship:
              - - 1
                - 0
                - 19
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
ops:
  - - - content
    - Insert:
        - - 1
          - type: ThematicBreak
