rust/schema/tests/snapshots/patch__theorem-add-text.snap
---
source: rust/schema/tests/patch.rs
assertion_line: 121
expression: "Fixture { old, new, ops: patch.ops, merged }"
---
old:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 32
      characterPercent: 100
  content:
    - type: Claim
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 32
          characterPercent: 100
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: Relatively interesting.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 23
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 23
              characterPercent: 100
        - type: MathBlock
          code:
            string: e = m*c^2
            authorship:
              - - 1
                - 0
                - 0
                - 9
          mathLanguage: latex
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 9
              characterPercent: 100
      claimType: Theorem
new:
  type: Article
  content:
    - type: Claim
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: Relatively interesting.
        - type: MathBlock
          code:
            string: e = m*c^2
          mathLanguage: latex
        - type: Paragraph
          content:
            - type: Text
              value:
                string: May be true.
      claimType: Theorem
merged:
  type: Article
  authors:
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Alice
      roleName: Importer
    - type: AuthorRole
      author:
        type: Person
        givenNames:
          - Bob
      roleName: Writer
  provenance:
    - type: ProvenanceCount
      provenanceCategory: Hw
      characterCount: 44
      characterPercent: 100
  content:
    - type: Claim
      authors:
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Alice
          roleName: Importer
        - type: AuthorRole
          author:
            type: Person
            givenNames:
              - Bob
          roleName: Writer
      provenance:
        - type: ProvenanceCount
          provenanceCategory: Hw
          characterCount: 44
          characterPercent: 100
      content:
        - type: Paragraph
          content:
            - type: Text
              value:
                string: Relatively interesting.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 23
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 23
              characterPercent: 100
        - type: MathBlock
          code:
            string: e = m*c^2
            authorship:
              - - 1
                - 0
                - 0
                - 9
          mathLanguage: latex
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Alice
              roleName: Importer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 9
              characterPercent: 100
        - type: Paragraph
          content:
            - type: Text
              value:
                string: May be true.
                authorship:
                  - - 1
                    - 0
                    - 0
                    - 12
          authors:
            - type: AuthorRole
              author:
                type: Person
                givenNames:
                  - Bob
              roleName: Writer
          provenance:
            - type: ProvenanceCount
              provenanceCategory: Hw
              characterCount: 12
              characterPercent: 100
      claimType: Theorem
ops:
  - - - content
      - 0
      - content
    - Push:
        type: Paragraph
        content:
          - type: Text
            value:
              string: May be true.
